fix: fix to compression

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TP-DM117-DungeonOfCognitiveRiddlesBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TP-DM117-DungeonOfCognitiveRiddlesBuild.data.gz",
-        frameworkUrl: buildUrl + "/TP-DM117-DungeonOfCognitiveRiddlesBuild.framework.js.gz",
-        codeUrl: buildUrl + "/TP-DM117-DungeonOfCognitiveRiddlesBuild.wasm.gz",
+        dataUrl: buildUrl + "/TP-DM117-DungeonOfCognitiveRiddlesBuild.data",
+        frameworkUrl: buildUrl + "/TP-DM117-DungeonOfCognitiveRiddlesBuild.framework.js",
+        codeUrl: buildUrl + "/TP-DM117-DungeonOfCognitiveRiddlesBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TP-DM117-DungeonOfCognitiveRiddles",
